<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="@string/menu_menu" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/menu_cart" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_receipt"
        android:title="@string/menu_orders" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile" />
</menu> 